# libx-api

./: .clang-tidy  .dockerignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: openapi.json
include/: db.h
include/controllers/: book_controller.h  docs_controller.h
include/logging/: logger.h
include/metrics/: metrics.h
include/models/: book.h
include/providers/: ibook_provider.h  postgres_provider.h
include/services/: auth_service.h  book_service.h  migration_service.h
integration/: run_integration_tests.sh
migrations/: 001_create_schema.sql  002_create_books.sql
scripts/: format.sh  lint.sh
src/: db.cpp  main.cpp
src/controllers/: book_controller.cpp  docs_controller.cpp
src/logging/: logger.cpp
src/metrics/: metrics.cpp
src/providers/: postgres_provider.cpp
src/services/: auth_service.cpp  migration_service.cpp
tests/: auth_service_test.cpp  book_model_test.cpp  book_service_test.cpp  docs_test.cpp  metrics_test.cpp  migration_service_test.cpp
